--- a/Mensajeros Urbanos 03/formulario-def.html
+++ b/Mensajeros Urbanos 03/formulario-def.html
@@ -630,7 +630,7 @@
             <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
             <form id="question" class="FR form">
                 <center>
-                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <a href="%%c1;cpdir=" target="_blank"><img class="imagen" src="https://i.imgur.com/mjLBPmM.png" style="height:270px; width: 300px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
+                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <a href="%%c1;cpdir=" target="_blank"><img class="imagen" src="https://i.imgur.com/mcYm8La.png" style="height:270px; width: 300px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
     box-shadow:0 0 0px 0px #fff; margin-bottom: -25px;"></a></span>
 
                     <!-- <span style="bottom:5px; text-align:center ; float:center; background-color: #e22532;"> <img src="https://i.imgur.com/zRuYlRY.jpg" style="height:100px; width: 250px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -3px; margin-bottom: -5px;"></span>
@@ -648,20 +648,21 @@
 
                     <p style="width: 100%; text-align: left; margin-bottom: -28px;" ><input placeholder="CURP:" name="curp" type="text" required="text" ></p>
 
-                    <p style="width: 100%; text-align: left; margin-bottom: -28px;" ><input placeholder="VEHÍCULO:" name="car" type="text" required="text" ></p>
+
+                    <p style="width: 100%; text-align: left; margin-bottom: -28px;">
+                        <select id="VEHÍCULO" name="car" type="text">
+                            <option value="" disabled selected></option>
+                            <option>Carro</option>
+                            <option>Moto</option>
+                            <option>Bicicleta</option>
+                            <option selected>VEHÍCULO</option>
+                        </select>
+                    </p>
 
                     <!--<p style="width: 100%; text-align: left; margin-bottom: -28px;" ><input placeholder="NOMBRE" name="lastName" type="text" required="text" ></p>
                     
                     <p style="width: 100%; text-align: left; margin-bottom: -28px;" ><input placeholder="E-MAIL" name="email" type="email" required="@" ></p>
 
-                    <p style="width: 100%; text-align: left; margin-bottom: -28px;">
-                        <select id="sexo" name="sexo" type="text">
-                            <option value="" disabled selected></option>
-                            <option>Hombre</option>
-                            <option>Mujer</option>
-                            <option selected>Género</option>
-                        </select>
-                    </p>
 
                     <p style="width: 100%; text-align: left; margin-bottom: -28px;">
                         <select id="plan" name="plan" type="text">
@@ -683,8 +684,8 @@
 
                     <span style="display: flex; flex-direction: row-reverse; justify-content: left; width: 100%; margin-top: 30px; margin-left: 0px;">
 
-                        <label style="min-width: 80%" for="condiciones"><a href="https://mensajerosurbanos.dahooxapp.com/template/views/angy_mensajerosurbanos_com/registroaliadosm%C3%A9xico/" target="_blank" style="font-size: 13px; font-family: Arial; text-align: left; color: #105677;">Acepto las
-                                <u><b>políticas de privacidad</b></u></a><a href="https://mensajerosurbanos.dahooxapp.com/template/views/angy_mensajerosurbanos_com/registroaliadosm%C3%A9xico/" target="_blank" style="font-size: 13px; font-family: Arial; text-align: left; color: #105677;  "> y los <u><b>términos y condiciones.</b>.</u></a></label>
+                        <label style="min-width: 80%" for="condiciones"><a href="https://mensajerosurbanos.com/politicas-de-privacidad" target="_blank" style="font-size: 13px; font-family: Arial; text-align: left; color: #105677;">Acepto las
+                                <u><b>políticas de privacidad</b></u></a><a href="https://mensajerosurbanos.com/terminos-y-condiciones-aliado" target="_blank" style="font-size: 13px; font-family: Arial; text-align: left; color: #105677;  "> y los <u><b>términos y condiciones.</b>.</u></a></label>
 
                         <!--    <input type="checkbox" width="10" name="condiciones2" style="text-align: left; background-color: red" /></span>
 
@@ -775,7 +776,7 @@
             function  $('.button'.click(function(){
                 return function() {
                     var adfClickTAGName = 'clickTAG',
-                        adfClickTAGUrl = 'https://www.decathlon.com.mx/page/my-decathlon-club.html';
+                        adfClickTAGUrl = 'https://mensajerosurbanos.com/servicio-de-mensajeria-express';
 
                     window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
                 }
