--- a/Cusqueña Sept/Fade_300x600.html
+++ b/Cusqueña Sept/Fade_300x600.html
@@ -77,14 +77,14 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/MehGj5q.gif");
+            background: url("https://i.imgur.com/DNrB201.png");
             background-size: cover;
             
         }
 
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/1Oj1o3f.png");
+            background: url("https://i.imgur.com/o9ASJyg.png");
             background-size: cover;
 
         }
@@ -240,7 +240,7 @@
 
     .item-4 {
         animation: fade4 16s infinite;
-        -webkit-animation: fade4 2s infinite;
+        -webkit-animation: fade4 22s infinite;
     }
 
     @keyframes fade {
