--- a/Cusqueña Sept/Cube.html
+++ b/Cusqueña Sept/Cube.html
@@ -929,7 +929,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i230.image.html:image/html-->
-<img id="i230" src="https://i.imgur.com/mZgGbjU.gif"/>
+<img id="i230" src="https://i.imgur.com/YTYKFkM.png"/>
 <!--#/#--><!--#i5.i278.image.html:image/html-->
 <img id="i278" src="https://i.imgur.com/AyCJMp9.png"/>
 <!--#/#--><!--#i5.i282.image.html:image/html-->
