--- a/Seat/index300x600.html
+++ b/Seat/index300x600.html
@@ -189,9 +189,9 @@
 <body>
     <content id="banner">
         <video id="video" onmouseover="videoPause()" webkit-playsinline="true" playsinline="true" autoplay muted>
-            <source src="https://josemob.github.io/page/images/Maqueta_SuvSeat_30s_V5.mp4" type="video/mp4" />
-            <source src="https://josemob.github.io/page/images/Maqueta_SuvSeat_30s_V5.webm" type="video/webm" />
-            <source src="https://josemob.github.io/page/images/Maqueta_SuvSeat_30s_V5.ogg" type="video/ogg" />
+            <source src="https://biznagamedia.github.io/BiznagaM/seat/resources/video/Master_SuvSeat_30s.mp4" type="video/mp4" />
+            <source src="https://biznagamedia.github.io/BiznagaM/seat/resources/video/Master_SuvSeat_30s.webm" type="video/webm" />
+            <source src="https://biznagamedia.github.io/BiznagaM/seat/resources/video/Master_SuvSeat_30s.ogg" type="video/ogg" />
         </video>
         <!-----------RECURSO EXTERNO---------->
 
