analizar venet txt

--- a/Analizar/Venetian320x480.html
+++ b/Analizar/Venetian320x480.html
@@ -2134,6 +2134,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
+/*#/#*//*#i7.text.css:text/base/css*/
+#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "GothamMedium_1"; font-size: 20px; color: #00408b; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
+        -ms-transform: translate(0, 0) translate(20px, 363px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 363px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 363px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 363px) rotate(0deg);
+}
 /*#/#*//*#i87.image.css:image/base/css*/
 #i87 { opacity: 1; }
 /*#/#*//*#i87.i88.positioning.css:positioning/base/css.2*/
@@ -2143,14 +2152,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 347px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 347px) rotate(0deg);
 }
-/*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "GothamMedium_1"; font-size: 20px; color: #00408b; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(20px, 293px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 293px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 293px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 293px) rotate(0deg);
+/*#/#*//*#i98.image.css:image/base/css*/
+#i98 { opacity: 1; }
+/*#/#*//*#i98.i99.positioning.css:positioning/base/css.2*/
+#i98 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 297px; height: 60px;
+        -ms-transform: translate(0, 0) translate(12px, 283px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(12px, 283px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(12px, 283px) rotate(0deg);
+        transform: translate(0, 0) translate(12px, 283px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2265,10 +2274,12 @@ url('fonts/') format('svg');
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i87.image.html:image/html-->
-<img id="i87" src="https://i.imgur.com/iNC2ax4.jpg"/>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Más de 1200 pruebas diagnósticas.</div>
+<!--#/#--><!--#i87.image.html:image/html-->
+<img id="i87" src="https://i.imgur.com/iNC2ax4.jpg"/>
+<!--#/#--><!--#i98.image.html:image/html-->
+<img id="i98" src="https://i.imgur.com/RRfOh5U.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i72.slice-image.html:slice-image/html.1-->
@@ -2290,12 +2301,16 @@ url('fonts/') format('svg');
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
+/*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
+bmShow('i7');
 /*#/#*//*#i87.image.js:image/base/js*/
 
 /*#/#*//*#i87.i88.positioning.js:positioning/base/js.2*/
 bmShow('i87');
-/*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
-bmShow('i7');
+/*#/#*//*#i98.image.js:image/base/js*/
+
+/*#/#*//*#i98.i99.positioning.js:positioning/base/js.2*/
+bmShow('i98');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2378,15 +2393,20 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i7.text.meta:text/meta*/
+name: Más de 1200 pruebas diagnósticas.; customName: false;
+/*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i87.image.meta:image/meta*/
 name: MAP; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i87.i88.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i7.text.meta:text/meta*/
-name: Más de 1200 pruebas diagnósticas.; customName: false;
-/*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
+/*#/#*//*#i98.image.meta:image/meta*/
+name: TXT; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i98.i99.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
